Various spelling fixes throughout docs

--- a/content/client-lib-development-guide/feature-prioritisation.textile
+++ b/content/client-lib-development-guide/feature-prioritisation.textile
@@ -32,7 +32,7 @@ h2. Realtime client library feature prioritisation
 * Simple realtime connection over "WebSockets":/concepts/websockets with JSON & MessagePack support - see "#initialization, #connect and #close within connection spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimeconnection and "ProtocolMessage object spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablymodelsprotocolmessage
 * Attach, detach, publish and subscribe for channels - see "Channel spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimechannel and "channels object spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimechannels
 * Message encoding and encryption on realtime channels - see "Message spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimechannel-message
-* Presence subscriptions, enter, update and leave - see "#enter, #update, #leave, #subscribe and #unsubcribe of Presence spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimepresence
+* Presence subscriptions, enter, update and leave - see "#enter, #update, #leave, #subscribe and #unsubscribe of Presence spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimepresence
 * Presence member map - see "get and sync specs within the Presence spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimepresence
 * Connection management - see "connection failure section of the Connection failure spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimeconnection-failures
 * Connection resume - see "resume section of the Connection failure spec":https://github.com/ably/ably-ruby/blob/master/SPEC.md#ablyrealtimeconnection-failures
