--- a/content/concepts/mqtt.textile
+++ b/content/concepts/mqtt.textile
@@ -130,7 +130,7 @@ As IoT applications have found ways to disrupt industries on a huge scale, MQTT 
 
 As laid out above, MQTT is a lightweight messaging protocol built for questionable network quality and batteries with physical limitations, including power source and CPU. However, that doesn't mean potentially lousy transmissions are its only application. From recurring data sampling to industrial machine control, MQTT delivers variable levels of service for a number of IoT infrastructure types:
 
-* *Ambient sensor data*: As mentioned, MQTT supports the "at most once" message delivery model. On networks with spotty coverage or high latency, this means information could be lost or "duplicated":/concepts/idempotency. In fields where remote sensors record and transmit data at set intervals, this is a nonissue, since new readings are streaming in on a regular basis. Sensors in remote environments are usually low-power devices, making MQTT an ideal fit for IoT sensor buildouts with lower-priority data transmission needs.
+* *Ambient sensor data*: As mentioned, MQTT supports the "at most once" message delivery model. On networks with spotty coverage or high latency, this means information could be lost or "duplicated":/concepts/idempotency. In fields where remote sensors record and transmit data at set intervals, this is a non-issue, since new readings are streaming in on a regular basis. Sensors in remote environments are usually low-power devices, making MQTT an ideal fit for IoT sensor buildouts with lower-priority data transmission needs.
 * *Machine health data*: In the interest of responding to emerging issues quickly and avoiding downtime, a wind turbine may require guaranteed delivery of machine health data to local teams even before that information hits a datacenter. For times like these, "at least once" message delivery ensures maintenance flags are seen by the right eyes at the right time to prevent problems, even if those flags may arrive as duplicates. This is for higher-priority machine-to-machine communication systems.
 * *Billing systems*: There are even higher-priority and higher-fidelity messages that require the right touch. In business situations where duplicated data entries are not OK, including where billing is involved, the "exactly once":/concepts/idempotency QoS tag comes in handy. This eliminates duplicate or lost message packets across billing or invoicing systems and cuts down on anomalies and unnecessary strife with clients.
 
@@ -235,7 +235,7 @@ h2(#scale). What about deploying MQTT at scale?
 
 There are two considerations when it comes to MQTT and scale: is it the right protocol and, regardless of protocol choice, the infrastructure and network capabilities needed to handle increased device-to-device streaming over MQTT.
 
-Lightweight Machine-to-Machine (LWM2M) is another protocol to consider alongside MQTT at the enterprise level. Compared with MQTT, LWM2M is sometimes _better suited for longer-term IoT deployments_. MQTT is ideal when companies want to engage in a trial run of IoT functionality without a lot of buy-in, whereas LWM2M provides features for companies building longer-term infrastructure that’s versatile. LWM2M also provides superior device management tools, such as connectivity monitoring, firmware updates and remote device actions. For enterprises with lots of unmanaged devices sending high volumes of data to a central IoT platform, LWM2M is the better choice. However, we’re talking huge-scale IoT deployments so most of the time MQTT is a more than adequate choice. Plus, of the two, MQTT remains more common with wider support.
+Lightweight Machine-to-Machine (LWM2M) is another protocol to consider alongside MQTT at the enterprise level. Compared with MQTT, LWM2M is sometimes _better suited for longer-term IoT deployments_. MQTT is ideal when companies want to engage in a trial run of IoT functionality without a lot of buy-in, whereas LWM2M provides features for companies building longer-term infrastructure that’s versatile. LWM2M also provides superior device management tools, such as connectivity monitoring, firmware updates and remote device actions. For enterprises with lots of un-managed devices sending high volumes of data to a central IoT platform, LWM2M is the better choice. However, we’re talking huge-scale IoT deployments so most of the time MQTT is a more than adequate choice. Plus, of the two, MQTT remains more common with wider support.
 
 Then there’s infrastructure capabilities. The number of concurrent connections a server can handle is rarely the bottleneck when it comes to server load. Most decent MQTT servers/brokers can support thousands of concurrent connections, but what’s the workload required to process and respond to messages once the MQTT server process has handled receipt of the actual data? Typically there will be all kinds of potential concerns, such as reading and writing to and from a database, integration with a server, allocation and management of resources for each client, and so on. As soon as one machine is unable to cope with the workload, you’ll need to start adding additional servers, which means now you’ll need to start thinking about load-balancing, synchronization of messages among clients connected to different servers, generalized access to client state irrespective of connection lifespan or the specific server that the client is connected to – the list goes on and on.
 
