--- a/content/concepts/server-sent-events.textile
+++ b/content/concepts/server-sent-events.textile
@@ -91,7 +91,7 @@ This unidirectionality causes an additional problem: when a client loses a conne
 
 h2(#sse-support). SSE support
 
-SSE is widely supported across popular browsers - which in turn means it’s supported by a range of mobile and embedded IoT devices. That said, before attempting to implement SSE it’s worth "checking support coverage":https://caniuse.com/#feat=eventsource for broswers your application or service supports.
+SSE is widely supported across popular browsers - which in turn means it’s supported by a range of mobile and embedded IoT devices. That said, before attempting to implement SSE it’s worth "checking support coverage":https://caniuse.com/#feat=eventsource for browsers your application or service supports.
 
 <a href="https://files.ably.io/website/images/conceps/sse-browser-support.jpg" target="_blank">
   <img src="https://files.ably.io/website/images/conceps/sse-browser-support.jpg" style="width: 100%" alt="Browers that support SSE as of June 2019.">
