--- a/content/concepts/websockets.textile
+++ b/content/concepts/websockets.textile
@@ -153,9 +153,9 @@ h3(#ditching-http-for-something-more-appropriate). Ditching HTTP for something m
 
 When making an HTTP request and receiving a response, the actual two-way network communication involved takes place over an active TCP/IP socket. The web URL that was requested in the browser is mapped via the global DNS system to an IP address, and the default port for HTTP requests is 80. This means that although a web URL was entered into the browser, the actual communication occurs via TCP/IP, using an IP address and port combination that looks something like, for example, @123.11.85.9:80@.
 
-As we now know, WebSockets are built on top of the TCP stack as well, which means all we need is a way for the client and the server to jointly agree to hold the socket connection open and repurpose it for ongoing communication. If they do this, then there is no technical reason why they can't continue to use the socket to transmit any kind of arbitrary data, as long as they have both agreed as to how the binary data being sent and received should be interpreted.
+As we now know, WebSockets are built on top of the TCP stack as well, which means all we need is a way for the client and the server to jointly agree to hold the socket connection open and re-purpose it for ongoing communication. If they do this, then there is no technical reason why they can't continue to use the socket to transmit any kind of arbitrary data, as long as they have both agreed as to how the binary data being sent and received should be interpreted.
 
-To begin the process of repurposing the TCP socket for WebSocket communication, the client can include a standard request header that was invented specifically for this kind of use case:
+To begin the process of re-purposing the TCP socket for WebSocket communication, the client can include a standard request header that was invented specifically for this kind of use case:
 
 ```[bash]
 GET /index.html HTTP/1.1
@@ -170,7 +170,7 @@ Upgrade: websocket
 
 The @Connection@ header tells the server that the client would like to negotiate a change in the way the socket is being used. The accompanying value @Upgrade@ indicates that the transport protocol currently in use via TCP should change. Now that the server knows that the client wants to upgrade the protocol currently in use over the active TCP socket, the server knows to look for the corresponding @Upgrade@ header, which will tell it which transport protocol the client wants to use for the remaining lifetime of the connection. As soon as the server sees @websocket@ as the value of the @Upgrade@ header, it knows that a WebSocket handshake process has begun.
 
-Note that the handshake process (along with everything else) is outlined in "RFC 6455":https://tools.ietf.org/html/rfc6455, if you'd like to go into more detail than is covered in this article. 
+Note that the handshake process (along with everything else) is outlined in "RFC 6455":https://tools.ietf.org/html/rfc6455, if you'd like to go into more detail than is covered in this article.
 
 h3(#avoiding-funny-business). Avoiding funny business
 
@@ -356,11 +356,11 @@ minimize. View code sample
   ```[javascript]
   var WebSocketServer = require('uws').Server;
   var wss = new WebSocketServer({ port: 3000 });
- 
+
   function onMessage(message) {
     console.log('received: ' + message);
   }
- 
+
   wss.on('connection', function(ws) {
     ws.on('message', onMessage);
     ws.send('something');
@@ -410,11 +410,11 @@ minimize. View code sample
   server.on('upgrade', function(request, socket, body) {
     if (WebSocket.isWebSocket(request)) {
       var ws = new WebSocket(request, socket, body);
-    
+
       ws.on('message', function(event) {
         ws.send(event.data);
       });
-    
+
       ws.on('close', function(event) {
         console.log('close', event.code, event.reason);
         ws = null;
