--- a/content/core-features/versions/v1.0/authentication.textile
+++ b/content/core-features/versions/v1.0/authentication.textile
@@ -18,7 +18,7 @@ jump_to:
     - Auth object
 ---
 
-Both the "REST client library":/rest/authentication and the "Realtime client library":/realtime/authentication use common authentication mechanisms. The two schemes supported by Ably are "Basic Authentication":#basic-authentication, which uses your private "API key":https://support.ably.io/solution/articles/3000030054-what-is-an-app-api-key, and "Token Authentication":#token-authentication, which uses short-lived tokens for access which are periodically renewed. 
+Both the "REST client library":/rest/authentication and the "Realtime client library":/realtime/authentication use common authentication mechanisms. The two schemes supported by Ably are "Basic Authentication":#basic-authentication, which uses your private "API key":https://support.ably.io/solution/articles/3000030054-what-is-an-app-api-key, and "Token Authentication":#token-authentication, which uses short-lived tokens for access which are periodically renewed.
 
 Token Authentication, in most cases, is the recommended strategy on the client-side as it provides more fine-grained access control and limits the risk of exposed or compromised credentials.
 
@@ -118,7 +118,7 @@ This is similar to signing an Ably "@TokenRequest@":/realtime/authentication#req
 An example of creating an "Ably JWT":/core-features/authentication#ably-jwt manually can be seen below, with *SECRET* being the "secret part of your API key":https://support.ably.io/support/solutions/articles/3000030054-what-is-an-app-api-key. In most scenarios however, we would recommend you use one of the many "JWT libraries available for simplicity":https://jwt.io/:
 
 minimize. View example of creating an Ably JWT
-  bc[javascript]. var header = { 
+  bc[javascript]. var header = {
       "typ":"JWT",
       "alg":"HS256",
       "kid": "{{API_KEY_NAME}}"
@@ -153,7 +153,7 @@ If a system has an existing "JWT":https://jwt.io/ scheme, it can be useful to em
 minimize. View example of issuing an Ably-compatible token inside the of header of a JWT
   bc[javascript]. var ably = new Ably.Rest({ key: '{{API_KEY}}' });
   ably.auth.requestToken({ clientId: 'client@example.com' }, function(err, tokenDetails) {
-    var header = { 
+    var header = {
       "typ":"JWT",
       "alg":"HS256",
       "x-ably-token": tokenDetails.token
@@ -224,7 +224,7 @@ Wildcards are also supported for "operations":#capability-operations, by request
 
 h3(#capabilities-example-key). Capabilities example for API key
 
-In order to define which capabilities an API key will have, simply select the appropiate capability boxes when "setting up your API key":https://support.ably.io/support/solutions/articles/3000030502-setting-up-and-managing-api-keys. The structure to define channels and namespaces is structurally the same as defined in the above "wildcards":#wildcards section.
+In order to define which capabilities an API key will have, simply select the appropriate capability boxes when "setting up your API key":https://support.ably.io/support/solutions/articles/3000030502-setting-up-and-managing-api-keys. The structure to define channels and namespaces is structurally the same as defined in the above "wildcards":#wildcards section.
 
 h3(#capabilities-example). Capabilities example in code for tokens
 
