--- a/content/general/push/activate-subscribe.textile
+++ b/content/general/push/activate-subscribe.textile
@@ -298,7 +298,7 @@ blang[objc,swift].
   }
 
   - (void)ablyPushCustomDeregister:(ARTErrorInfo *)error d
-                           eviceId:(ARTDeviceId *)deviceId
+                          deviceId:(ARTDeviceId *)deviceId
                           callback:(void (^)(ARTErrorInfo * _Nullable))callback {
       if (error) {
           // Handle error.
