--- a/content/general/push/admin.textile
+++ b/content/general/push/admin.textile
@@ -70,7 +70,7 @@ Rest.Request("POST", "/push/publish", null, body, null);
 The push admin API offers three key features:
 
 * "@publish@":#publish for "direct publishing to devices and groups of identified devices":/general/push/publish#direct-publishing
-* "@deviceRegistrations@":#device-registrations for registering, updating, listing and deregistering push devices
+* "@deviceRegistrations@":#device-registrations for registering, updating, listing and de-registering push devices
 * "@channelSubscriptions@":#channel-subscriptions for subscribing, listing and unsubscribing individual devices or groups of identified devices to push notifications published on channels
 
 h2(#access-control). Push admin access control and device authentication
