--- a/content/realtime/channel-metadata.textile
+++ b/content/realtime/channel-metadata.textile
@@ -92,7 +92,7 @@ h3(#occupancy-events). channel.occupancy lifecycle events
 
 When "channel.occupancy events are enabled":https://support.ably.io/support/solutions/articles/3000088326-how-can-i-enable-channel-lifecycles for your app, you can subscribe to channel "occupancy":#occupancy events by attaching to the channel @[meta]channel.lifecycle@ using a realtime connection. However, please bear in mind that "realtime connections and channels have rate limits":https://support.ably.io/solution/articles/3000053845-do-you-have-any-connection-message-rate-or-other-limits-on-accounts based on your package size. If the rate of channel lifecycle events exceeds this, a realtime connection is not going to be a reliable way to consume these events as you may get disconnected or lifecycle events may be discarded.
 
-If you wish to stream this data beyond the limit of a single subscriber connection, you can make use of "Ably Reactor":/reactor with a "Reactor Rule":https://support.ably.io/solution/articles/3000074406-how-to-set-up-a-reactor-rule. This allows you to react to lifecycle events and trigger "serverless funtions":/general/functions, "deliver messages to queues":/general/queues, or "stream data to third party services":/general/firehose for realtime processing.
+If you wish to stream this data beyond the limit of a single subscriber connection, you can make use of "Ably Reactor":/reactor with a "Reactor Rule":https://support.ably.io/solution/articles/3000074406-how-to-set-up-a-reactor-rule. This allows you to react to lifecycle events and trigger "serverless functions":/general/functions, "deliver messages to queues":/general/queues, or "stream data to third party services":/general/firehose for realtime processing.
 
 h3(#reactor). Reactor rules
 
