--- a/content/realtime/versions/v1.0/channel-metadata.textile
+++ b/content/realtime/versions/v1.0/channel-metadata.textile
@@ -56,7 +56,7 @@ minimize. See an example of a capability allowing subscription to all metachanne
 minimize. See an example of a capability allowing all permissible actions on all metachannels and all regular channels
   ```[json]
   {
-    "[meta]*":["*"], 
+    "[meta]*":["*"],
     "*":["*"]
   }
   ```
@@ -94,7 +94,7 @@ h3(#occupancy-events). Occupancy Events
 
 You can subscribe to channel "occupancy":#occupancy events by attaching to the channel @[meta]channel.lifecycle@ using a realtime connection. However, please bear in mind that "realtime connections and channels have rate limits":https://support.ably.io/solution/articles/3000053845-do-you-have-any-connection-message-rate-or-other-limits-on-accounts based on your package size. If the rate of channel lifecycle events exceeds this, a realtime connection is not going to be a reliable way to consume these events as you may get disconnected or lifecycle events may be discarded.
 
-If you wish to stream this data beyond the limit of a single subscriber connection, you can make use of "Ably Reactor":/reactor with a "Reactor Rule":https://support.ably.io/solution/articles/3000074406-how-to-set-up-a-reactor-rule. This allows you to react to lifecycle events and trigger "serverless funtions":/general/functions, "deliver messages to queues":/general/queues, or "stream data to third party services":/general/firehose for realtime processing.
+If you wish to stream this data beyond the limit of a single subscriber connection, you can make use of "Ably Reactor":/reactor with a "Reactor Rule":https://support.ably.io/solution/articles/3000074406-how-to-set-up-a-reactor-rule. This allows you to react to lifecycle events and trigger "serverless functions":/general/functions, "deliver messages to queues":/general/queues, or "stream data to third party services":/general/firehose for realtime processing.
 
 h3(#reactor). Reactor rules
 
