--- a/content/rest-api/beta.textile
+++ b/content/rest-api/beta.textile
@@ -320,7 +320,7 @@ For a response object @response@, @response.success@ will be true if the batch p
 
 For successful requests, @response.items@ will contain a list of the responses for each individual channel from which presence has been requested.
 
-For partially successful requests, @response.items.batchResponse@ will contain a list of the individual channel's results, be it an error or a success. You will know a partial success has occured by the @response.errorCode@, which will be @40020@.
+For partially successful requests, @response.items.batchResponse@ will contain a list of the individual channel's results, be it an error or a success. You will know a partial success has occurred by the @response.errorCode@, which will be @40020@.
 
 Below would be an example of how to deal with these:
 
