--- a/content/rest/channels.textile
+++ b/content/rest/channels.textile
@@ -471,7 +471,7 @@ blang[csharp].
 blang[go].
   h4. Returns
 
-  The function returns "@ErrorInfo@":#error-info if an error has occured, otherwise it returns @nil@.
+  The function returns "@ErrorInfo@":#error-info if an error has occurred, otherwise it returns @nil@.
 
 h6(#history).
   default: history
