--- a/content/root/how-ably-works.textile
+++ b/content/root/how-ably-works.textile
@@ -18,7 +18,7 @@ Ably's global realtime service enables Internet enabled devices, such as a brows
 
 h2. Key concepts
 
-At its core, Ably is a cloud-based "pub/sub":https://www.ably.io/channels Platform-as-a-Service ensuring any device publishing messages to Ably will be received in real time by any number of subscribing devices. But it is more than that. Ably makes it possible for developers to build apps and infrastructure that can communicate in realtime without the worries of managing scale, latency, data durability, integrity and storage, seamless connection recovery, device interopability, network outages, encryption, security and authentication, throttling, and denial of service attacks, to name a few. Additionally, our platform supports both "pub/sub":https://www.ably.io/channels and "message-queue":/general/queues patterns.
+At its core, Ably is a cloud-based "pub/sub":https://www.ably.io/channels Platform-as-a-Service ensuring any device publishing messages to Ably will be received in real time by any number of subscribing devices. But it is more than that. Ably makes it possible for developers to build apps and infrastructure that can communicate in realtime without the worries of managing scale, latency, data durability, integrity and storage, seamless connection recovery, device interoperability, network outages, encryption, security and authentication, throttling, and denial of service attacks, to name a few. Additionally, our platform supports both "pub/sub":https://www.ably.io/channels and "message-queue":/general/queues patterns.
 
 In order to understand how Ably works, and why "pub/sub":https://www.ably.io/channels is only one part of the problem we solve for developers, we have have broken down the key concepts below.
 
@@ -154,7 +154,7 @@ h3(#any-internet-device). Any internet enabled device support
 
 Most of our client libraries use a "WebSocket":/concepts/websockets to establish a realtime connection to Ably, and use a simple HTTP request for all other REST operations including authentication.
 
-However, client libraries such as our "Javascript browser library":https://github.com/ably/ably-js are designed to choose the best transport available based on the browser and connection available. By starting from a base transport that has the highest likelyhood of working and then attempting to upgrading the connection to use a websocket, Ably ensures that practically every browser in use today is able to establish a realtime connection to Ably. The following transports are currently supported by our "Javascript browser library":https://github.com/ably/ably-js in order of best to worst performing:
+However, client libraries such as our "Javascript browser library":https://github.com/ably/ably-js are designed to choose the best transport available based on the browser and connection available. By starting from a base transport that has the highest likelihood of working and then attempting to upgrading the connection to use a websocket, Ably ensures that practically every browser in use today is able to establish a realtime connection to Ably. The following transports are currently supported by our "Javascript browser library":https://github.com/ably/ably-js in order of best to worst performing:
 
 * "WebSockets":/concepts/websockets ("supported by 94% of browsers globally as of Dec 2017":http://caniuse.com/#feat=websockets)
 * XHR streaming
