--- a/content/sse/index.textile
+++ b/content/sse/index.textile
@@ -56,7 +56,7 @@ h5. Request parameters
 
 - channels := **mandatory**. One or more channel names, separated by commas (or the @separator@ if specified). Non-url-safe characters should be URL-encoded (for example, @?channels=foo%3Fbar@ will subscribe to the channel @foo?bar@). Alias: @channel@.
 - v := **mandatory**. The version of the api you are requesting. The current (and only) version of the API is 1.1, so only @v=1.1@ is accepted.
-- separator := **optional**. A separator, to enable easy subscriptions to channels with commas in their name. For example, @?separator=|&channel=fo,o|ba,r@ will subcribe to the two channels @fo,o@ and @ba,r@.
+- separator := **optional**. A separator, to enable easy subscriptions to channels with commas in their name. For example, @?separator=|&channel=fo,o|ba,r@ will subscribe to the two channels @fo,o@ and @ba,r@.
 - key := **optional**. An Ably API key to use, if using basic auth.
 - accessToken := **optional** An Ably auth token to use, if using token auth.
 - lastEvent := **optional**. An @id@ to resume from. Only required when starting a new SSE connection which resumes from a previous connection.
@@ -140,7 +140,7 @@ h5. Request parameters
 
 - channels := **mandatory**. One or more channel names, separated by commas (or the @separator@ if specified). Non-url-safe characters should be URL-encoded (for example, @?channels=foo%3Fbar@ will subscribe to the channel @foo?bar@). Alias: @channel@.
 - v := **mandatory**. The version of the api you are requesting. The current (and only) version of the API is 1.1, so only @v=1.1@ is accepted.
-- separator := **optional**. A separator, to enable easy subscriptions to channels with commas in their name. For example, @?separator=|&channel=fo,o|ba,r@ will subcribe to the two channels @fo,o@ and @ba,r@.
+- separator := **optional**. A separator, to enable easy subscriptions to channels with commas in their name. For example, @?separator=|&channel=fo,o|ba,r@ will subscribe to the two channels @fo,o@ and @ba,r@.
 - key := **optional**. An Ably API key to use, if using basic auth.
 - accessToken := **optional** An Ably auth token to use, if using token auth.
 - lastEvent := **optional**. An @id@ to resume from. Only required when starting a new SSE connection which resumes from a previous connection.
