--- a/content/tutorials/reactor-event-aws.textile
+++ b/content/tutorials/reactor-event-aws.textile
@@ -362,7 +362,7 @@ h3. (a) Getting the application skeleton in place
 
 h3. (b) Getting a basic application script working
 
-The application script has a few parts to it, but isn't too complex. The script will need to update the user interface at various points, and because the layout is fairly simple, we're just going to use vanilla JavaScript code to accomplish this, rather than overcomplicating things with frameworks such as Angular or React. For anything more ambitious, you'll likely want to upgrade the code in this tutorial to use a framework of your choosing.
+The application script has a few parts to it, but isn't too complex. The script will need to update the user interface at various points, and because the layout is fairly simple, we're just going to use vanilla JavaScript code to accomplish this, rather than over-complicating things with frameworks such as Angular or React. For anything more ambitious, you'll likely want to upgrade the code in this tutorial to use a framework of your choosing.
 
 The first thing to do is to instantiate the "Ably client library":https://www.ably.io/download (already linked for you in the above HTML) and verify that we can send and receive messages successfully. The following code will define a channel, subscribe to it, and use it to publish customer messages. If everything is working, the fact that we're subscribed to the same channel that we're publishing to means that our messages will simply be echoed back to us via the @receiveMessage@ handler function, which will then append them to the chat log in the HTML.
 
@@ -394,7 +394,7 @@ function processInput(e) {
 
   const message = inputField.value.trim(); // Grab the trimmed input message
   if (message.length > 0) { // Don't post blank messages
-    
+
     // Asynchronously post the message to the Ably channel. The channel
     // subscription we created above will echo the message shortly:
     channel.publish('user', { message });
@@ -411,13 +411,13 @@ inputField.addEventListener('keydown', processInput);
 // argument indicates whether the message comes from the user or the bot:
 function appendMessageElement(type, message) {
   const div = document.createElement('div');
-  
+
   // Add two CSS classes, because later we'll want to be able to visually
   // differentiate user messages from bot messages:
   div.classList.add(type, 'message');
   div.textContent = message;
   chatLog.appendChild(div);
-  
+
   // If the conversation goes on for a while, messages will fall off the bottom
   // of the page. Instead, let's scroll to the bottom of the page automatically:
   const el = document.scrollingElement;
@@ -504,12 +504,12 @@ function processInput(e) {
   if (e.which !== 13) { // Character code 13 is the ENTER key
     return;
   }
-  
+
   const message = inputField.value.trim();
   if (message.length > 0) {
     postMessage(message);
   }
-  
+
   inputField.value = '';
 }
 ```
@@ -532,7 +532,7 @@ const ablyApiKey = 'YOUR_API_KEY_GOES_HERE';
 
 // This is the handler function that AWS will invoke:
 exports.handler = (event, context, callback) => {
-  
+
   // Get the Lex runtime from the AWS client library:
   const lex = new AWS.LexRuntime();
 
@@ -652,10 +652,10 @@ function appendMessageElement(type, message) {
   div.classList.add(type, 'message');
   div.textContent = message;
   chatLog.appendChild(div);
-  
+
   const el = document.scrollingElement;
   el.scrollTop = el.scrollHeight;
-  
+
   return div; // Add this line
 }
 ```
