--- a/content/tutorials/reactor-event-google.textile
+++ b/content/tutorials/reactor-event-google.textile
@@ -131,7 +131,7 @@ Make sure you have a Google Cloud account with which to create your server funct
 
 # Once you're logged into your Google Cloud dashboard, click the "Select a project" option in the top left of the title bar.
 # A white dialog box will be displayed. To the right of the search box at the top of the dialog area, click the "Create project" button, displayed as a "+" symbol.
-# Give your project a name. *Take a note of the project ID - you will need it when setting up the Ably Reactor rule.* 
+# Give your project a name. *Take a note of the project ID - you will need it when setting up the Ably Reactor rule.*
 # There will be a short waiting period while your project is created and associated with your account. When your project has been created, you'll be taken to your project dashboard. From the left menu, look under the "Compute" subheading and select the "Cloud Functions" option. _(You may be required to enable the API if you're a first-time Cloud Functions user. Prompts are provided in the user interface to help you do this.)_
 
 bq. _Note: For some new users, the "Cloud Functions" option may be missing from the menu. If so, select the "APIs & services" option higher up in the menu. Next, perform a search for "Functions" and follow the prompts to enable the Cloud Functions API for your account. Once you've done that, return to your project dashboard, and the menu item should be available._
@@ -173,7 +173,7 @@ Back in the Google Cloud interface for your deployed function, you'll see a set 
 }
 ```
 
-If everything worked, you should see output in your Ably dev console indicating a successful invocation of the function. 
+If everything worked, you should see output in your Ably dev console indicating a successful invocation of the function.
 
 <a href="/images/tutorials/reactor/reactor-event-google-function-3.png" target="_blank">
   <img src="/images/tutorials/reactor/reactor-event-google-function-3.png" style="width: 100%" alt="Define function app details">
@@ -278,7 +278,7 @@ h3. (a) Getting the application skeleton in place
 
 h3. (b) Getting a basic application script working
 
-The application script has a few parts to it, but isn't too complex. The script will need to update the user interface at various points, and because the layout is fairly simple, we're just going to use vanilla JavaScript code to accomplish this, rather than overcomplicating things with frameworks such as Angular or React. For anything more ambitious, you'll likely want to upgrade the code in this tutorial to use a framework of your choosing.
+The application script has a few parts to it, but isn't too complex. The script will need to update the user interface at various points, and because the layout is fairly simple, we're just going to use vanilla JavaScript code to accomplish this, rather than over-complicating things with frameworks such as Angular or React. For anything more ambitious, you'll likely want to upgrade the code in this tutorial to use a framework of your choosing.
 
 The first thing to do is to instantiate the "Ably client library":https://www.ably.io/download (already linked for you in the above HTML) and verify that we can send and receive messages successfully. The following code will define a channel, subscribe to it, and use it to publish customer messages. If everything is working, the fact that we're subscribed to the same channel that we're publishing to means that our messages will simply be echoed back to us via the @receiveMessage@ handler function, which will then append them to the chat log in the HTML.
 
@@ -314,7 +314,7 @@ function processInput(e) {
 
   const message = inputField.value.trim(); // Grab the trimmed input message
   if (message.length > 0) { // Don't post blank messages
-    
+
     // Asynchronously post the message to the Ably channel. The channel
     // subscription we created above will echo the message shortly:
     channel.publish('user', { message });
@@ -331,13 +331,13 @@ inputField.addEventListener('keydown', processInput);
 // argument indicates whether the message comes from the user or the bot:
 function appendMessageElement(type, message) {
   const div = document.createElement('div');
-  
+
   // Add two CSS classes, because later we'll want to be able to visually
   // differentiate user messages from bot messages:
   div.classList.add(type, 'message');
   div.textContent = message;
   chatLog.appendChild(div);
-  
+
   // If the conversation goes on for a while, messages will fall off the bottom
   // of the page. Instead, let's scroll to the bottom of the page automatically:
   const el = document.scrollingElement;
@@ -435,12 +435,12 @@ function processInput(e) {
   if (e.which !== 13) { // Character code 13 is the ENTER key
     return;
   }
-  
+
   const message = inputField.value.trim();
   if (message.length > 0) {
     postMessage(message);
   }
-  
+
   inputField.value = '';
 }
 ```
@@ -461,10 +461,10 @@ function appendMessageElement(type, message) {
   div.classList.add(type, 'message');
   div.textContent = message;
   chatLog.appendChild(div);
-  
+
   const el = document.scrollingElement;
   el.scrollTop = el.scrollHeight;
-  
+
   return div; // Add this line
 }
 ```
