--- a/content/tutorials/web-rtc-screen-sharing.textile
+++ b/content/tutorials/web-rtc-screen-sharing.textile
@@ -148,7 +148,7 @@ Create a new file called @connection-helper.js@ and add the following code:
             handleEndCall(this._remoteClient)
         }
         _onStream(data) {
-            recieveStream(this._remoteClient, data)
+            receiveStream(this._remoteClient, data)
         }
 
 
@@ -386,7 +386,7 @@ p(tip). Note: Since Chrome requires an extension to share your screen, we will n
         connections[data.user].handleSignal(data.signal)
         document.getElementById('call').style.display = 'block'
     }
-    function recieveStream(client_id, stream) {
+    function receiveStream(client_id, stream) {
         var video = document.getElementById('remote')
         attachMediaStream(video, stream);
         video.play()
@@ -403,7 +403,7 @@ Since we are attempting to connect to the other peer, this event would be fired.
 
 In the connect function, we check if the connection already exists. If it doesn’t, create a new connection instance with the stream passed into it, else if it does exist, send the signal to the connection.
 
-Next, you would see the @recieveStream@ function. This function was called in step 4, under the @_onStream@. What it does, is to load the remote stream into the second video tag in our markup.
+Next, you would see the @receiveStream@ function. This function was called in step 4, under the @_onStream@. What it does, is to load the remote stream into the second video tag in our markup.
 
 That’s it, we are connected to the other peer, and we can see a live screen.
 
