--- a/content/types/_push_admin.textile
+++ b/content/types/_push_admin.textile
@@ -56,7 +56,7 @@ h6(#device-registrations).
   default: deviceRegistrations
   ruby,python: device_registrations
 
-The returned "@DeviceRegistrations@":#device-registrations-object object provides functionality for registering, updating, listing and deregistering push devices.
+The returned "@DeviceRegistrations@":#device-registrations-object object provides functionality for registering, updating, listing and de-registering push devices.
 
 h6(#channel-subscriptions).
   default: channelSubscriptions
